- ScrollingListBox scrollbar correctly matches state of the list.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Change Log
   - Fixes:
     - SliderVertical and SliderHorizontal respect their full range of values and
       no longer ignore the maximum value.
+    - ScrollingListBox scrollbar correctly matches state of the list.
 
   V0.99 (20100520)
   
