--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,8 +5,11 @@ Change Log
   
   - Fixes:
     - Rewrote SliderVertical and SliderHorizontal again to improve accuracy.
-    - Removed jumpGrip from all slider gagdets.
-    - Added setValueWithBitshift to all slider gadgets.
+    - Removed jumpGrip() from all slider gagdets.
+    - Added setValueWithBitshift() to all slider gadgets.
+	- Added getMinimumStep() to SliderVertical and SliderHorizontal.
+	- Removed getValuesPerPixel() from all slider gadgets.
+	
 
   V0.99 (20100520)
   
