--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,7 @@ Change Log
       Rect functions.
     - PackedFont16::renderChar() aborts correctly if there is nothing to render
       (Lakedaemon).
+    - Bitmap::getData(x, y) no longer declared inline (Lakedaemon).
   - New Features:
     - Added getPath() to FileRequester and FileListBox.
     - Converted Rect struct to class.
