- Deleted CourierMono as it was an exact duplicate of Courier.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Change Log
     - Bitmap::getData(x, y) no longer declared inline (Lakedaemon).
     - Renamed gunsuh15.bmp and gunsuhche15.bmp to gungsuh15.bmp and
       gungsuhche15.bmp respectively.
+    - Deleted CourierMono as it was an exact duplicate of Courier.
   - New Features:
     - Added getPath() to FileRequester and FileListBox.
     - Converted Rect struct to class.
