--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,8 @@ Change Log
     - Converted most fonts from PackedFont16 to PackedFont1.
     - bmp2font upgraded to latest version - no longer creates gigantic arrays in
       PackedFont1 fonts.
+    - Converted GlyphFont to PackedFont16 (manually altered class to force
+      fixed-width).
   - New Features:
     - Added getPath() to FileRequester and FileListBox.
     - Converted Rect struct to class.
