- Removed Font and MonoFont classes (PackedFont classes are faster and more efficient).  - Fixed tests to work with new Rect class.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -12,11 +12,13 @@ Change Log
     - Renamed gunsuh15.bmp and gunsuhche15.bmp to gungsuh15.bmp and
       gungsuhche15.bmp respectively.
     - Deleted CourierMono as it was an exact duplicate of Courier.
-    - Converted most fonts from PackedFont16 to PackedFont1.
-    - bmp2font upgraded to latest version - no longer creates gigantic arrays in
-      PackedFont1 fonts.
+    - Converted most fonts to PackedFont1.
     - Converted GlyphFont to PackedFont16 (manually altered class to force
       fixed-width).
+    - bmp2font upgraded to latest version - no longer creates gigantic arrays in
+      PackedFont1 fonts.
+    - Removed Font and MonoFont classes (PackedFont classes are faster and more
+      efficient).
   - New Features:
     - Added getPath() to FileRequester and FileListBox.
     - Converted Rect struct to class.
