- WoopsiString::compareTo() no longer inlined (fixes SF bug 3017420).

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -19,6 +19,7 @@ Change Log
       efficient).
     - bmp2font upgraded to latest version - no longer creates gigantic arrays in
       PackedFont1 fonts; removed support for Font and MonoFont classes.
+    - WoopsiString::compareTo() no longer inlined (fixes SF bug 3017420).
 
   - New Features:
     - Added getPath() to FileRequester and FileListBox.
