- Moved woopsiRGB() macro from woopsifuncs.h to graphics.h.  - Moved woopsiDmaFill() and woopsiDmaCopy() into new dmafuncs files.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -22,6 +22,8 @@ Change Log
     - Removed GraphicsPort::drawCircle(), drawFilledCircle(), drawHorizLine()
       and drawVertLine().
     - Fixed TinyFont (broken in last release).
+    - Moved woopsiRGB() macro from woopsifuncs.h to graphics.h.
+    - Moved woopsiDmaFill() and woopsiDmaCopy() into new dmafuncs files.
 
   - New Features:
 
