--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -9,6 +9,8 @@ Change Log
   - New Features:
     - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
     - Setting MultiLineTextBox's max rows to -1 forces it to retain all text.
+    - Added getCharTop() to font classes.
+    - Various minor .NET tool improvements.
 
   V0.99.3 (20100819)
   
