Fonts include doxygen comments.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Change Log
   
   - Fixes:
     - All makefiles no longer create .ds.gba and .sc.nds binaries.
+    - Fonts include doxygen comments.
   
   - New Features:
     - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
