Reorganised PSD and BMP files and prevented demo build process from including BMP files.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,8 @@ Change Log
     - All makefiles no longer create .ds.gba and .sc.nds binaries.
     - Fonts include doxygen comments.
     - Amended return type of some font properties (Lakedaemon).
+    - Reorganised PSD and BMP files.
+    - Prevented demo build process from unnecessarily including BMP files.
   
   - New Features:
     - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
