Examples build script improved.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,7 @@ Change Log
   - Fixes:
     - Removed freetype classes, library and example (Lakedaemon's distro will
       provide this functionality).
+    - Examples build script uses for loop instead of explicitly named folders.
 
   - New Features:
     - Added makefile for demo - can now be built from command line.
