--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,7 @@ Change Log
       provide this functionality).
     - Examples build script uses for loop instead of explicitly named folders.
     - Gadget::checkCollision(Gadget) works correctly.
+    - Tests build script uses for loop instead of explicitly named folders.
 
   - New Features:
     - Added makefile for demo - can now be built from command line.
