--- a/Woopsi/ChangeLog.txt
+++ b/Woopsi/ChangeLog.txt
@@ -9,6 +9,8 @@ Change Log
     - WoopsiString::compareTo() sorts Chinese text correctly (carpfish).
     - ProgressBar at 100% completion no longer overflows the printout char
       array (carpfish).
+    - WoopsiString::compareTo() implements a simplistic natural sort (carpfish).
+    - Added StringIterator::getInteger() (carpfish).
 
   V1.0 (20110201)
   
