--- a/Woopsi/ChangeLog.txt
+++ b/Woopsi/ChangeLog.txt
@@ -13,9 +13,27 @@ Change Log
     - Removed width and height members from BitmapBase and transplanted to
       BitmapWrapper, FrameBuffer and Bitmap.
     - Removed constructor from FontBase.
+    - Clicking the depth or close button in an AmigaWindow will give the window
+      focus.
+    - Gadget::checkCollision(Gadget*) will ignore collisions with hidden
+      gadgets.
+    - Gadget::checkCollision(Gadget*) now accepts a const Gadget*.
+    - Replaced Gadget::swapGadgetDepth(Gadget*) with
+      Gadget::swapGadgetDepth(Gadget*, s32).
+    - Rewrote Gadget::swapDepth() to be more intelligent.
+    - The index to which Gadget::swapDepth() moves the gadget is now determined
+      by swapDepth() instead of the parent's swapGadgetDepth() method.
+    - Clicking the depth button in an AmigaWindow no longer results in graphical
+      corruption.
+    - Removed Screen::swapGadgetDepth().
+    - Removed Woopsi::swapGadgetDepth().
+    - Minor tidying and optimisations.
+    - Gadget::_decorationCount is an s32 instead of a u8.
+    - Fixed array index confusion in RectCache::markRectDamaged().
   
   - New Features:
-  
+    - Added Gadget::getHighestCollidingGadgetIndex().
+    - Added Gadget::getLowestCollidingGadgetIndex().
 
   V1.1 (20110329)
   
