--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,7 +7,8 @@
    in FileRequester - needs to work out where the option will appear in the
    list and mark that rect as dirty.  markRectDirty() method will automatically
    clip it out if it is off-screen).
-
+ - Need to set default font colour in gadget style as it can no longer be set in
+   the font class itself.
 
 Future
 ------
