--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,9 +1,7 @@
  - Key events - should these bubble up the hierarchy?
- - Redraw as little as possible when adding text to textboxes.
- - Ensure all commands that should change onscreen display do so (ie. addOption
-   in FileRequester - needs to work out where the option will appear in the
-   list and mark that rect as dirty.  markRectDirty() method will automatically
-   clip it out if it is off-screen).
+ - Rename all "addGadget", "removeGadget", etc methods that work with children
+   to either "xGadget" or "xChild", but make sure that the convention is
+   consistent.
 
 Future
 ------
@@ -18,3 +16,14 @@ FileRequester
 
 Appearance
  - Scrap the Amiga appearance and replace it with something unique?
+
+Won't Do
+--------
+
+ - Split Woopsi class into WoopsiApplication and WoopsiGadget - too tightly
+   linked.  Makes no sense to split them.
+ - Optimise MultiLineTextBox by redrawing only changed rows - too much
+   functionality is tidied into the subclasses and they don't give us enough
+   information back to make the optimisations possible.
+ - Split Gadget into Gadget and GadgetCollection - too tightly linked.  Makes
+   no sense to split them.
