--- a/Woopsi/ChangeLog.txt
+++ b/Woopsi/ChangeLog.txt
@@ -11,6 +11,7 @@ Change Log
     - Animation::getCurrentFrame() returns NULL if there are no frames.
     - Animation::getCurrentBitmap() returns NULL if there are no bitmaps.
     - Fixed memory leak when deleting SDL framebuffer.
+    - Removed extraneous globals from woopsifuncs.cpp.
   
   - New Features:
     - Added WoopsiTimer::isRunning().
