--- a/Woopsi/ChangeLog.txt
+++ b/Woopsi/ChangeLog.txt
@@ -10,6 +10,8 @@ Change Log
     - Animation::play() stops if there are no frames to play.
     - Animation::getCurrentFrame() returns NULL if there are no frames.
     - Animation::getCurrentBitmap() returns NULL if there are no bitmaps.
+    - WoopsiString::subString() passes the correct arguments to the WoopsiString
+      constructor.
   
   - New Features:
     - Added WoopsiTimer::isRunning().
